# ms_robot

./: CMakeLists.txt  README.md  package.xml
config/: amcl_file.yaml  hospital_map_save.pgm  hospital_map_save.yaml  mapper_params_online_async.yaml  ms_save.pgm  ms_save.yaml  nav2_params.yaml  rviz_config_file.rviz
description/: camera.xacro  imu.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
launch/: amcl_launch.py  complete_launch.launch.py  gzbwrd.launch.py  launch_sim.launch.py  localization_launch.py  my_map_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  rviz2_launch.py  sim_launch.py  view_gzbwrd.launch.py
